deploy/kubernetes/infrastructure/fix-wipp-permissions-for-notebook.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fix-wipp-permissions
spec:
  containers:
  - name: fix-wipp-permissions
    image: busybox
    command: [ "sh", "-c", "chown 1000:1000 /opt/shared/wipp/temp" ]
    volumeMounts:
      - name: wipp-volume
        mountPath: /opt/shared/wipp
  volumes:
    - name: wipp-volume
      persistentVolumeClaim:
        claimName: wipp-pv-claim
