deploy/kubernetes/infrastructure/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: labshare-polus-hedwig-ui-ingress
spec:
  rules:
  - host: j.ci.aws.labshare.org
    http:
      paths:
      - backend:
          serviceName: jupyterhub
          servicePort: 80
        path: /
